Fixing scrollbar offset

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 /* Scrollbar indicator styles */
 .header {
-  margin-left: 0px;
+  margin-left: -50px;
   position: fixed;
   top: 0;
   z-index: 1;
